--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.Register">
+        tools:context=".ui.StudentRegister">
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
