--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Log in"
-        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
+        app:layout_constraintBottom_toTopOf="@+id/editTextCourse"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="25sp"
         android:layout_margin="10dp"
@@ -27,11 +27,11 @@
         android:layout_margin="10dp"
         android:text="Email"
         app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
+        app:layout_constraintBottom_toTopOf="@+id/editTextCourse"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editTextCourse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -53,7 +53,7 @@
         android:textSize="18sp"
         android:layout_margin="10dp"
         android:text="Password"
-        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
+        app:layout_constraintTop_toBottomOf="@id/editTextCourse"
         app:layout_constraintBottom_toTopOf="@+id/edittextPassword"
         app:layout_constraintStart_toStartOf="parent" />
 
