--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Hello Student!"
+        android:text="@string/app_name"
         android:textColor="#fefefe"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
