--- a/app/src/main/res/layout/activity_user_group.xml
+++ b/app/src/main/res/layout/activity_user_group.xml
@@ -44,7 +44,7 @@
             <Button
                 android:layout_below="@id/studentUsergroup"
                 android:layout_width="match_parent"
-                android:text="Teacher"
+                android:text="ADMIN"
                 android:paddingTop="10dp"
                 android:layout_margin="10dp"
                 android:paddingBottom="10dp"
@@ -56,6 +56,7 @@
                 android:layout_below="@id/teacherUserGrp"
                 android:layout_width="match_parent"
                 android:text="Dorm staff"
+                android:visibility="gone"
                 android:paddingTop="10dp"
                 android:layout_margin="10dp"
                 android:paddingBottom="10dp"
@@ -68,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:text="Cafeteria staff"
                 android:paddingTop="10dp"
+                android:visibility="gone"
                 android:layout_margin="10dp"
                 android:paddingBottom="10dp"
                 android:onClick="selectCafeteria"
