--- a/app/src/main/res/layout/activity_admin_dash_board.xml
+++ b/app/src/main/res/layout/activity_admin_dash_board.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.AdminDashBoard">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="300dp"
+        app:cardCornerRadius="100dp"
+        android:onClick="Attend"
+        android:layout_centerVertical="true"
+        app:rippleColor="@color/colorPrimary"
+        android:clickable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_height="100dp"
+        android:focusable="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Scan"
+            android:id="@+id/buttonText"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_height="wrap_content"/>
+        <com.google.android.material.progressindicator.ProgressIndicator
+            android:layout_width="match_parent"
+            android:indeterminate="true"
+            android:visibility="gone"
+            android:id="@+id/progress"
+            android:layout_height="5dp"/>
+    </com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
