--- a/app/src/main/res/layout/activity_student_attend.xml
+++ b/app/src/main/res/layout/activity_student_attend.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp"
         android:id="@+id/scanNow"
         app:cardBackgroundColor="#43A047"
-        android:visibility="gone"
+
         android:layout_centerVertical="true"
         app:rippleColor="@color/colorPrimary"
         android:clickable="true"
@@ -44,6 +44,7 @@
         android:layout_centerVertical="true"
         app:rippleColor="@color/colorPrimary"
         android:clickable="true"
+        android:visibility="gone"
         android:layout_margin="5dp"
         android:id="@+id/stopWifi"
         app:cardBackgroundColor="#E53935"
@@ -65,6 +66,7 @@
         android:layout_below="@id/stopWifi"
         android:layout_centerVertical="true"
         app:rippleColor="@color/colorPrimary"
+        android:onClick="Logout"
         app:cardBackgroundColor="#FDD835"
         android:clickable="true"
         android:layout_centerHorizontal="true"
